# sp_web_app

./: .gitignore  docker-compose.yml
back/: Dockerfile  pyproject.toml
back/alembic/: env.py
back/alembic/versions/: 126032d9f133_switch_to_date_type_in_post.py  5266c0b2be3d_added_date.py  617d2a51e715_initial.py  693b8f7c8cc3_switch_to_datetime_type_in_post.py  69a827c4d166_add_imageid_to_member.py  c81cb8e4a3e3_added_like_count_to_post.py
back/app/: config.py  main.py
back/app/api/: router.py
back/app/api/endpoints/: date_controller.py  member_controller.py  post_controller.py
back/app/common/dto/: base.py  date_dto.py  member_dto.py  post_dto.py
back/app/common/model/: __init__.py  base.py  date.py  member.py  post.py
back/app/common/repository/: crud_base_repository.py  date_repository.py  member_repository.py  post_repository.py
back/app/db/: metadata.py  session.py
front/: pnpm-lock.yaml
front/src/api/: date.ts  member.ts  post.ts
front/src/components/: MemberCard.vue  PostCard.vue
front/src/components/admin/: AddMemberForm.vue  AddPostForm.vue  EditMemberForm.vue  EditPostFrom.vue
front/src/interfaces/: MemberInterface.ts  PostInterface.ts
front/src/lib/: axios.ts
front/src/store/modules/: base.ts
front/src/views/: ResourcesView.vue
front/src/views/admin/: DateView.vue  MemberView.vue  PostView.vue
nginx/: nginx.conf
